GORA-474 bug in org.apache.gora.solr.store.SolrStore#getDatumWriter & #getDatumReader